[gd_scene load_steps=4 format=3 uid="uid://ccv0e3ldy050e"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_6vmnw"]
[ext_resource type="Texture2D" uid="uid://b247q1fdo5cih" path="res://art/enemies/Drone Bomber.png" id="2_fgceo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1hsh5"]
radius = 42.19

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6vmnw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_fgceo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1hsh5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["enemy"]]
position = Vector2(1.90735e-06, 0.5)
scale = Vector2(3.9, 3.95)

[node name="MuzzlePositions" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
